# brew-maintainer

./: .gitignore  CLAUDE.md  README.md  install.sh  pyproject.toml  requirements.txt
backups/: Brewfile  Brewfile.gertrud
brew_maintainer/: __init__.py  __main__.py  backup.py  cli.py  maintainer.py  utils.py
